Added stub arc detail window controller

--- a/GrafDemo/Base.lproj/MainMenu.xib
+++ b/GrafDemo/Base.lproj/MainMenu.xib
@@ -666,14 +666,14 @@
         <window title="GrafDemo" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="main window" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="111" height="149"/>
+            <rect key="contentRect" x="335" y="390" width="111" height="216"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="111" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="111" height="216"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3gF-dL-a19">
-                        <rect key="frame" x="14" y="101" width="83" height="32"/>
+                        <rect key="frame" x="14" y="168" width="83" height="32"/>
                         <buttonCell key="cell" type="push" title="Simple" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="sVS-DX-oQj">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -683,7 +683,7 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aPA-J2-I4L">
-                        <rect key="frame" x="14" y="68" width="83" height="32"/>
+                        <rect key="frame" x="14" y="135" width="83" height="32"/>
                         <buttonCell key="cell" type="push" title="Lines" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="WZQ-Q2-1xp">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
@@ -693,13 +693,23 @@
                         </connections>
                     </button>
                     <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bab-6J-ltU">
-                        <rect key="frame" x="14" y="35" width="83" height="32"/>
+                        <rect key="frame" x="14" y="102" width="83" height="32"/>
                         <buttonCell key="cell" type="push" title="Paths" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cZz-YX-0uK">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
                         <connections>
                             <action selector="showPathController:" target="Voe-Tx-rLC" id="4O7-Ev-fmZ"/>
+                        </connections>
+                    </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t30-Xq-8de">
+                        <rect key="frame" x="14" y="69" width="83" height="32"/>
+                        <buttonCell key="cell" type="push" title="Arcs" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="QOb-6w-OLc">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="showArcsController:" target="Voe-Tx-rLC" id="Myl-L7-FP5"/>
                         </connections>
                     </button>
                 </subviews>
@@ -711,7 +721,7 @@
                     <constraint firstItem="3gF-dL-a19" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="wPl-8q-rIq"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="-207.5" y="60.5"/>
+            <point key="canvasLocation" x="-207.5" y="94"/>
         </window>
     </objects>
 </document>
