--- a/GrafDemo/BNRArcTypesWindowController.xib
+++ b/GrafDemo/BNRArcTypesWindowController.xib
@@ -8,6 +8,8 @@
         <customObject id="-2" userLabel="File's Owner" customClass="BNRArcTypesWindowController" customModule="GrafDemo" customModuleProvider="target">
             <connections>
                 <outlet property="arcEditingView" destination="ayl-hG-Cps" id="LqJ-bp-qRu"/>
+                <outlet property="endAngleSlider" destination="6Uc-c8-4ja" id="AY7-fQ-vxw"/>
+                <outlet property="startAngleSlider" destination="avQ-yB-6cv" id="7u2-ul-cVd"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
         </customObject>
@@ -23,10 +25,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ayl-hG-Cps" customClass="BNRArcEditingView">
-                        <rect key="frame" x="20" y="68" width="202" height="182"/>
+                        <rect key="frame" x="20" y="75" width="202" height="182"/>
                     </customView>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iup-cw-Fmw">
-                        <rect key="frame" x="18" y="44" width="86" height="18"/>
+                        <rect key="frame" x="18" y="51" width="86" height="18"/>
                         <buttonCell key="cell" type="check" title="Clockwise" bezelStyle="regularSquare" imagePosition="left" inset="2" id="2nW-EC-vVG">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
@@ -35,6 +37,36 @@
                             <action selector="toggleArcClockwise:" target="-2" id="xo4-Xp-RkN"/>
                         </connections>
                     </button>
+                    <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="avQ-yB-6cv">
+                        <rect key="frame" x="103" y="26" width="119" height="20"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="6.2831799999999998" tickMarkPosition="above" sliderType="linear" id="LpH-AY-e6M"/>
+                        <connections>
+                            <action selector="setStartAngle:" target="-2" id="5r3-Cc-Adu"/>
+                        </connections>
+                    </slider>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3zu-iH-Twb">
+                        <rect key="frame" x="18" y="28" width="73" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Start Angle" id="6nf-jW-ozZ">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Uc-c8-4ja">
+                        <rect key="frame" x="103" y="1" width="119" height="20"/>
+                        <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="6.2831799999999998" tickMarkPosition="above" sliderType="linear" id="s28-q5-gVr"/>
+                        <connections>
+                            <action selector="setEndAngle:" target="-2" id="Mzu-pC-VId"/>
+                        </connections>
+                    </slider>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="61N-b9-dtC">
+                        <rect key="frame" x="18" y="3" width="67" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="End Angle" id="8yf-xN-xis">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
             </view>
             <connections>
