--- a/GrafDemo/BNRArcTypesWindowController.xib
+++ b/GrafDemo/BNRArcTypesWindowController.xib
@@ -8,7 +8,9 @@
         <customObject id="-2" userLabel="File's Owner" customClass="BNRArcTypesWindowController" customModule="GrafDemo" customModuleProvider="target">
             <connections>
                 <outlet property="arcEditingView" destination="ayl-hG-Cps" id="LqJ-bp-qRu"/>
+                <outlet property="endAngleLabel" destination="K7H-iN-lEC" id="2E9-aN-0qq"/>
                 <outlet property="endAngleSlider" destination="6Uc-c8-4ja" id="AY7-fQ-vxw"/>
+                <outlet property="startAngleLabel" destination="I1p-QP-ldj" id="gPH-8c-1AC"/>
                 <outlet property="startAngleSlider" destination="avQ-yB-6cv" id="7u2-ul-cVd"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
             </connections>
@@ -29,7 +31,7 @@
                     </customView>
                     <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iup-cw-Fmw">
                         <rect key="frame" x="18" y="51" width="86" height="18"/>
-                        <buttonCell key="cell" type="check" title="Clockwise" bezelStyle="regularSquare" imagePosition="left" inset="2" id="2nW-EC-vVG">
+                        <buttonCell key="cell" type="check" title="Clockwise" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="2nW-EC-vVG">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                             <font key="font" metaFont="system"/>
                         </buttonCell>
@@ -38,7 +40,7 @@
                         </connections>
                     </button>
                     <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="avQ-yB-6cv">
-                        <rect key="frame" x="103" y="26" width="119" height="20"/>
+                        <rect key="frame" x="103" y="26" width="92" height="20"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="6.2831799999999998" tickMarkPosition="above" sliderType="linear" id="LpH-AY-e6M"/>
                         <connections>
                             <action selector="setStartAngle:" target="-2" id="5r3-Cc-Adu"/>
@@ -52,8 +54,16 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="I1p-QP-ldj">
+                        <rect key="frame" x="199" y="28" width="31" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="0.00" id="J6Y-BF-Dv5">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                     <slider verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6Uc-c8-4ja">
-                        <rect key="frame" x="103" y="1" width="119" height="20"/>
+                        <rect key="frame" x="103" y="1" width="92" height="20"/>
                         <sliderCell key="cell" continuous="YES" state="on" alignment="left" maxValue="6.2831799999999998" tickMarkPosition="above" sliderType="linear" id="s28-q5-gVr"/>
                         <connections>
                             <action selector="setEndAngle:" target="-2" id="Mzu-pC-VId"/>
@@ -62,6 +72,14 @@
                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="61N-b9-dtC">
                         <rect key="frame" x="18" y="3" width="67" height="17"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="End Angle" id="8yf-xN-xis">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K7H-iN-lEC">
+                        <rect key="frame" x="199" y="3" width="31" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="0.00" id="FOf-5L-UjN">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
