--- a/GrafDemo/BNRLinesWindowController.xib
+++ b/GrafDemo/BNRLinesWindowController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="8121.20" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8121.20"/>
+        <capability name="box content view" minToolsVersion="7.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="BNRLinesWindowController" customModule="GrafDemo" customModuleProvider="target">
             <connections>
                 <outlet property="dash0Slider" destination="8xr-hS-ygE" id="VfA-9t-ipA"/>
-                <outlet property="dash0slider" destination="cKF-tP-LiL" id="pL7-Lw-uaf"/>
                 <outlet property="dash1Slider" destination="xGE-Gp-zDa" id="PsM-xr-YGA"/>
                 <outlet property="dash2Slider" destination="b0L-jr-Ajg" id="asu-j6-R5y"/>
                 <outlet property="endCapPopUp" destination="ibz-Vg-z2S" id="ywC-Ju-qYq"/>
@@ -40,7 +40,7 @@
                 <subviews>
                     <box autoresizesSubviews="NO" title="Line Attributes" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="UgO-1s-F7z">
                         <rect key="frame" x="393" y="253" width="210" height="258"/>
-                        <view key="contentView">
+                        <view key="contentView" id="acd-I1-scv">
                             <rect key="frame" x="1" y="1" width="208" height="242"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
@@ -163,7 +163,7 @@
                     </customView>
                     <box autoresizesSubviews="NO" title="Line Phase" borderType="line" translatesAutoresizingMaskIntoConstraints="NO" id="cKF-tP-LiL" customClass="BNRCheckboxBox">
                         <rect key="frame" x="393" y="41" width="210" height="199"/>
-                        <view key="contentView">
+                        <view key="contentView" id="KYO-1N-Lfs">
                             <rect key="frame" x="1" y="1" width="208" height="183"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
